feat: update and remove services and controllers (#33)
